--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
         <form id="loginForm">
             <div><label for="username">Introduzca su usuario: </label><input type="text" id="username" name="username" value="" placeholder="Usuario"></div>
             <div><label for="password">Introduzca su contraseña: </label><input type="password" id="password" name="password" value="" placeholder="Contraseña"></div>
-            <input type="submit" value="Registrarte" id="login">
+            <input type="submit" value="Iniciar sesión" id="login">
           </form>
       </div>
     </article>
