--- a/mapa.html
+++ b/mapa.html
@@ -34,26 +34,21 @@
     <header>
         <nav>
             <a id="logout" href="viajes.html">Mis viajes</a>
-            <a href="#">Logout</a>
+            <a href="/logout">Logout</a>
         </nav>
     </header>
     <main >
         <div id="map">
 
         </div>
-        <!-- <template>
-            <div class="">
-                <h3><a class="image_name"></a></h3>
-                <p><a class="horario"></a></p>
-                <span class="bg-primary rounded text-white px-2"><a class="direccion text-white" data-toggle="modal"
-                        data-target="#exampleModal"></a></span>
-                <span class="label-tel bg-primary rounded text-white px-2">
-                    <a class="telefono text-white"></a>
-                </span>
+        <template>
+            <div>
+              <p></p>
+              <div></div>
             </div>
-        </template> -->
+          </template>
     </main>
-    <script src="js/app.js"></script>
+    <script src="js/mapa.js"></script>
 </body>
 
 </html>
