--- a/viajes.html
+++ b/viajes.html
@@ -42,9 +42,7 @@
       <div id="viajes"></div>
       <template id="viajes-template">
         <ul>
-          {{#each viajes}}
-          <li>{{trip_name}}</li>
-          {{/each}}
+          <li><a class="linkViaje" href="">{{trip_name}}</a></li>
         </ul>
       </template>
     </article>
