--- a/mapa.html
+++ b/mapa.html
@@ -42,9 +42,9 @@
 
         </div>
         <template>
-            <div>
-              <p></p>
-              <div></div>
+            <div class="marcador">
+              <h3></h3>
+              <div><img src="" alt=""></div>
             </div>
           </template>
     </main>
