--- a/viajes.html
+++ b/viajes.html
@@ -39,11 +39,9 @@
       <div>
         <h2>Tus viajes</h2>
       </div>
-      <div id="viajes"></div>
+      <div><ul id="lista"></ul></div>
       <template id="viajes-template">
-        <ul>
-          <li><a class="linkViaje" href="">{{trip_name}}</a></li>
-        </ul>
+          <a class="linkViaje" href="">{{trip_name}}</a>
       </template>
     </article>
   </main>
