--- a/mapa.html
+++ b/mapa.html
@@ -37,14 +37,17 @@
             <a href="/logout">Logout</a>
         </nav>
     </header>
-    <main >
-        <div id="map">
-
-        </div>
+    <main>
+        <article class="articleMap">
+            <h2></h2>
+            <div id="map">
+    
+            </div>
+        </article>
         <template>
             <div class="marcador">
               <h3></h3>
-              <div><img src="" alt=""></div>
+              <div><a class="clickImage" href=""><img src="" alt=""></a></div>
             </div>
           </template>
     </main>
